--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr Capote - Spanish Inspired Artist</title>
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+
+    <!-- Primary Meta Tags -->
+    <title>Dr Capote | Cuban Rapper & Singer | First Gay Cuban Reggaeton Artist</title>
+    <meta name="title" content="Dr Capote | Cuban Rapper & Singer | First Gay Cuban Reggaeton Artist">
+    <meta name="description"
+        content="Javiero Josias Fernández (Dr Capote) - 20-year-old Cuban rapper and singer, known as the Gay King of Reggaeton. First gay Cuban artist in Reggaeton music history. Born December 21, 2004.">
+    <meta name="keywords"
+        content="Dr Capote, Cuban rapper, Cuban singer, gay reggaeton artist, Javiero Josias Fernández, Cuban music, reggaeton, Spanish music, LGBTQ artist, gay Cuban artist, El Rey Gay Del Cuba">
+    <meta name="author" content="Dr Capote">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="http://drcapoteoficial.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://drcapoteoficial.com/">
+    <meta property="og:title" content="Dr Capote | Cuban Rapper & Singer | First Gay Cuban Reggaeton Artist">
+    <meta property="og:description"
+        content="Javiero Josias Fernández (Dr Capote) - 20-year-old Cuban rapper and singer, known as the Gay King of Reggaeton. First gay Cuban artist in Reggaeton music history.">
+    <meta property="og:image" content="http://drcapoteoficial.com/assets/cover.jpg">
+    <meta property="og:site_name" content="Dr Capote Official">
+    <meta property="og:locale" content="es_ES">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://drcapoteoficial.com/">
+    <meta property="twitter:title" content="Dr Capote | Cuban Rapper & Singer | First Gay Cuban Reggaeton Artist">
+    <meta property="twitter:description"
+        content="Javiero Josias Fernández (Dr Capote) - 20-year-old Cuban rapper and singer, known as the Gay King of Reggaeton.">
+    <meta property="twitter:image" content="http://drcapoteoficial.com/assets/cover.jpg">
+    <meta property="twitter:site" content="@drcapoterey">
+    <meta property="twitter:creator" content="@drcapoterey">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./assets/logo.png">
+    <link rel="apple-touch-icon" href="./assets/logo.png">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MusicGroup",
+      "name": "Dr Capote",
+      "alternateName": "Javiero Josias Fernández",
+      "description": "Cuban rapper and singer, known as the Gay King of Reggaeton. First gay Cuban artist in Reggaeton music history.",
+      "genre": ["Reggaeton", "Latin Music", "Hip Hop"],
+      "url": "http://drcapoteoficial.com/",
+      "image": "http://drcapoteoficial.com/assets/cover.jpg",
+      "logo": "http://drcapoteoficial.com/assets/logo.png",
+      "foundingDate": "2004-12-21",
+      "foundingLocation": {
+        "@type": "Place",
+        "name": "Cienfuegos, Cuba"
+      },
+      "sameAs": [
+        "https://x.com/drcapoterey",
+        "https://www.instagram.com/itzmee._.javii",
+        "https://www.tiktok.com/@drcapoterey",
+        "https://www.youtube.com/@drcapoterey"
+      ],
+      "member": {
+        "@type": "Person",
+        "name": "Javiero Josias Fernández",
+        "alternateName": "Dr Capote",
+        "birthDate": "2004-12-21",
+        "birthPlace": {
+          "@type": "Place",
+          "name": "Cienfuegos, Cuba"
+        },
+        "nationality": "Cuban",
+        "jobTitle": "Rapper, Singer",
+        "description": "20-year-old Cuban rapper and singer, first gay Cuban artist in Reggaeton music history"
+      }
+    }
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
